# SBI_project

./: README.md  Tutorial.txt  config.yaml  first_try.ipynb  pocket_finder.py  predictor.py  pyproject.toml
Chimera_files/: Thrombin_cleaned.py  Thrombin_original.py
bio_pockets/: __init__.py  analysis.py  config_manager.py  consensus_analyzer.py  data.py  utils.py
bio_pockets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pocket_finder/: pocket_finder.py  pocket_ranking.txt  pyproject.toml
pocket_finder/myproject/: __init__.py  analysis.py  data.py  utils.py
pocket_finder/myproject.egg-info/: PKG-INFO  SOURCES.txt
pocket_finder_final/: .~lock.visualize_pockets.py.odt#  1H8D_alignment.sto  1H8D_query.fasta  1H8D_ranking.txt  README.md  pocket_finder.py  pyproject.toml
pocket_finder_final/bio_pockets/: __init__.py  analysis.py  data.py
pocket_finder_final/bio_pockets.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pocketfinder tester/: alignment.fasta  pocket_finder.ipynb  pocket_finder_en.ipynb  pocket_finder_fixed.ipynb  pocket_ranking.txt  pocket_residues.txt
presets/: large_proteins.yaml  medium_proteins.yaml  small_enzymes.yaml
