[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bio_pockets"
version = "1.0"
description = "A structural bioinformatics tool for protein binding pocket prediction using geometry and HMM-based conservation."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="Cristina Torredemer & Ramona Walch", email="your.email@uni.edu"}]
dependencies = [
    "numpy>=1.20.0",        # For coordinate math and arrays
    "pandas>=1.3.0",       # For CSV generation and dataframes
    "biopython>=1.79",     # For PDB parsing and sequence handling
    "scikit-learn>=1.0.0", # For DBSCAN clustering in analysis.py
    "scipy>=1.7.0",        # For KDTree and spatial calculations
    "pyyaml>=6.0",         # For loading the preset .yaml files
]

[project.scripts]
predict_pockets = "pocket_finder:main"

[tool.setuptools.packages.find]
include = ["bio_pockets*"] # it tells setuptools to only look inside bio_pockets/ and ignore presets/

[tool.setuptools]
py-modules = ["pocket_finder"] # This tells setuptools to include pocket_finder.py as a standalone module
